# Projeto---Wanderson

./: .env.example  .env.test  .gitignore  README.md  app.py  pyproject.toml
borajunto/: __init__.py  cli.py
borajunto/ext/config/: __init__.py
borajunto/ext/login/: __init__.py
borajunto/forms/: attachment.py  auth.py  photo.py  task.py  trip.py
borajunto/models/: __init__.py  attachment.py  invite.py  member.py  photo.py  task.py  trip.py  user.py
borajunto/services/: invites.py  permissions.py  uploads.py
borajunto/views/: __init__.py  auth.py  files.py  gallery.py  main.py  tasks.py  trips.py
instance/uploads/: .gitkeep
static/css/: style.css
templates/auth/: login.html  profile.html  register.html
templates/gallery/: list.html  upload.html
templates/main/: base.html  index.html
templates/tasks/: _task_card.html  form.html  upload.html
templates/trips/: detail.html  form.html  invite.html  list.html
tests/: conftest.py  test_auth.py  test_gallery.py  test_invites.py  test_tasks.py  test_trips.py  test_uploads.py
