[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "borajunto"
version = "0.1.0"
description = "Plataforma colaborativa para planejamento de viagens em grupo."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask",
    "python-dotenv",
    "Flask-SQLAlchemy",
    "Flask-Login",
    "Flask-WTF",
    "email-validator",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "black",
    "flake8",
]

test = [
    "pytest",
    "pytest-cov",
    "pytest-flask",
]

[tool.setuptools.packages.find]
include = ["borajunto*"]